--- a/contact.html
+++ b/contact.html
@@ -39,12 +39,21 @@
     </nav>
     <main class="main-content">
         <div class="blog-post">
-            <h3>Contact Me</h3>
-            <p>I'd love to hear from you! Whether you have questions about my <br>university journey or you just want to connect, or just say hello.</p>
-            <p>Feel free to reach out through any of the following ways:</p>
-            <p><strong>Email:</strong> enocuk488@gmail.com</p>
-            <p><strong>Instagram:</strong> @nagodyasene</p>
-            <p>I try to respond to all messages within 24-48 hours. <br>Looking forward to connecting with you!</p>
+            <div class="macos-title-bar">
+                <div class="macos-controls">
+                    <div class="macos-control close"></div>
+                    <div class="macos-control minimize"></div>
+                    <div class="macos-control maximize"></div>
+                </div>
+                <div class="macos-title">Contact Me</div>
+            </div>
+            <div class="blog-post-content">
+                <p>I'd love to hear from you! Whether you have questions about my <br>university journey or you just want to connect, or just say hello.</p>
+                <p>Feel free to reach out through any of the following ways:</p>
+                <p><strong>Email:</strong> enocuk488@gmail.com</p>
+                <p><strong>Instagram:</strong> @nagodyasene</p>
+                <p>I try to respond to all messages within 24-48 hours. <br>Looking forward to connecting with you!</p>
+            </div>
         </div>
     </main>
 
@@ -69,5 +78,6 @@
             }, 800); // Minimum loading time of 800ms
         });
     </script>
+    <script src="./blog-drag.js"></script>
 </body>
 </html>
