--- a/index.html
+++ b/index.html
@@ -33,20 +33,32 @@
                 <a href="./contact.html">Contact</a>
             </div>
             <div class="blog-button">
-                <a href="./index.html">Blog</a>
+                <a href="./blog.html">Blog</a>
             </div>
         </div>
     </nav>
     <main class="main-content">
         <div class="blog-post">
-            <h3>Welcome to Enes' Blog</h1>
-            <p>This is a blog created for university purposes. Here you can find <br>various articles and posts related to different topics.</p>
-            <p>Feel free to explore the content and learn more about the <br>subjects that interest you!</p>
+            <div class="macos-title-bar">
+                <div class="macos-controls">
+                    <div class="macos-control close"></div>
+                    <div class="macos-control minimize"></div>
+                    <div class="macos-control maximize"></div>
+                </div>
+                <div class="macos-title">
+                    <h3>Welcome to Enes' Blog</h3>
+                </div>
+            </div>
+            <div class="blog-post-content">
+                <p>This is a blog created for university purposes. Here you can <br>find  various articles and posts related to different topics.</p>
+                <p>Feel free to explore the content and learn more about the <br>subjects that interest you!</p>
+            </div>
         </div>
     </main>
 
     <!-- External JavaScript files -->
     <script src="./hamburger-menu.js"></script>
+    <script src="./blog-drag.js"></script>
     <script>
         // Loading screen functionality
         window.addEventListener('load', function() {
