--- a/template.html
+++ b/template.html
@@ -43,9 +43,19 @@
     </nav>
     <main class="main-content">
         <div class="blog-post">
-            <h3>Page Title</h3>
-            <p>This is a template page. Replace this content with your own.</p>
-            <p>Add your content here!</p>
+            <div class="macos-title-bar">
+                <div class="macos-controls">
+                    <div class="macos-control close"></div>
+                    <div class="macos-control minimize"></div>
+                    <div class="macos-control maximize"></div>
+                </div>
+                <div class="macos-title">Page Title</div>
+            </div>
+            <div class="blog-post-content">
+                <h3>Page Title</h3>
+                <p>This is a template page. Replace this content with your own.</p>
+                <p>Add your content here!</p>
+            </div>
         </div>
     </main>
 
