Blog-post cannot be dragged out of the screen.

--- a/about.html
+++ b/about.html
@@ -43,7 +43,9 @@
                     <div class="macos-control minimize"></div>
                     <div class="macos-control maximize"></div>
                 </div>
-                <div class="macos-title">About</div>
+                <div class="macos-title">
+                    <span>About</span>
+                </div>
             </div>
             <div class="blog-post-content">
                 <h3>About Enes' Blog</h3>
@@ -55,6 +57,7 @@
 
     <!-- External JavaScript files -->
     <script src="./hamburger-menu.js"></script>
+    <script src="./blog-drag.js"></script>
     <script>
         // Loading screen functionality
         window.addEventListener('load', function() {
@@ -74,6 +77,5 @@
             }, 800); // Minimum loading time of 800ms
         });
     </script>
-    <script src="./blog-drag.js"></script>
 </body>
 </html>
