--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,9 @@
                     <div class="macos-control minimize"></div>
                     <div class="macos-control maximize"></div>
                 </div>
-                <div class="macos-title">Blog Post</div>
+                <div class="macos-title">
+                    <span>Blog Post</span>
+                </div>
             </div>
             <div class="blog-post-content">
                 <p>Here's where the magic happens!</p>
