--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,9 @@
                     <div class="macos-control minimize"></div>
                     <div class="macos-control maximize"></div>
                 </div>
-                <div class="macos-title">Contact Me</div>
+                <div class="macos-title">
+                    <span>Contact Me</span>
+                </div>
             </div>
             <div class="blog-post-content">
                 <p>I'd love to hear from you! Whether you have questions about my <br>university journey or you just want to connect, or just say hello.</p>
