--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="macos-control maximize"></div>
                 </div>
                 <div class="macos-title">
-                    <h3>Welcome to Enes' Blog</h3>
+                    <span>Welcome to Enes' Blog</span>
                 </div>
             </div>
             <div class="blog-post-content">
